syntax = "proto3";

message LocationMessage {
    int32 location_id = 1;
    int32 person_id = 2;
    string longitude = 3;
    string latitude = 4;
    string creation_time = 5;
}

message LocationGetMessage {
    int32 location_id = 1;
}

message LocationGetContactsMessage {
    int32 person_id = 1;
    string start_date = 2;
    string end_date = 3;
    int32 meters = 4;  
}

message LocationMessageList {
    repeated LocationMessage locations = 1;
}

service LocationService {
    rpc Create(LocationMessage) returns (LocationMessage);
    rpc Get(LocationGetMessage) returns (LocationMessage);
    rpc GetContacts(LocationGetContactsMessage) returns (LocationMessageList);
}